--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,13 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
+.link {
+    @apply hover:underline;
 }
-
-* {
-  box-sizing: border-box;
+.btn {
+    @apply text-white rounded-lg outline-none hover:outline-gray-500 hover:outline-offset-0 hover:outline-1 p-3 text-xl bg-[rgba(48,49,52)];
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.optionsFooter {
+    @apply flex justify-center space-x-4 text-[rgb(153,157,162)] p-5;
 }
